Fix: Contact button hover z-index

--- a/public/scss/layouts/home.scss
+++ b/public/scss/layouts/home.scss
@@ -415,6 +415,7 @@ body {
     border: 2px solid $light;
     border-radius: 50%;
     padding: 1.5em;
+    z-index: 1;
 
     &:hover {
       transform-origin: center;
